# python-iam-policy-builder

./: LICENSE  README.md  pyproject.toml
iam_policy/aws/: aws_iam_policy_builder.py
iam_policy/gcp/: gcp_iam_policy_builder.py
